<resources>
    <string name="app_name">CS3218Tut_YipJiajie</string>

    <!-- Tutorial 1 Simple Calculator -->
    <string name="calculator">SIMPLE CALCULATOR (TUTORIAL 1)</string>
    <string name="default_textview">0</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="sqrt">√</string>
    <string name="dot">.</string>

    <string name="clear">C</string>
    <string name="allClear">AC</string>

    <!-- Tutorial 2 Graphing -->
    <string name="graphing">GRAPHING (TUTORIAL 2)</string>
    <string name="sine">SINE</string>
    <string name="cosine">COSINE</string>
    <string name="Aplus">A+</string>
    <string name="Aminus">A-</string>
    <string name="Pplus">P+</string>
    <string name="Pminus">P-</string>
    <string name="Fplus">F+</string>
    <string name="Fminus">F-</string>
    <string name="back_to_main">BACK TO MAIN</string>
    <string name="compositeFunction">Composite Function</string>
    <string name="title_activity_tutorial3">tutorial3</string>

    <!-- Tutorial 3 Sound -->
    <string name="sound">SOUND (TUTORIAL 3)</string>
    <string name="capture_sound">Capture Sound</string>
    <string name="goToMainActivity">BACK TO MAIN</string>

    <!-- Tutorial 4 Integration -->
    <string name="calculus">CALCULUS (TUTORIAL 4)</string>

    <!-- Tutorial 5A FFT -->
    <string name="ffta">FFT (TUTORIAL 5A)</string>
    <string name="fft">FFT</string>

    <string name="fftb">LIVE FFT (TUTORIAL 5B)</string>
    <string name="fftc">SPECTROGRAM (TUTORIAL 5C)</string>


</resources>
